fix 2-footer.css file adding text-align center property

--- a/web_static/styles/2-footer.css
+++ b/web_static/styles/2-footer.css
@@ -4,4 +4,5 @@ footer {
     width: 100%;
     position: absolute;
     bottom: 0;
+    text-align: center;
 }
